--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -1,24 +1,24 @@
-<md-sidenav #sidenav mode="side">
+<mat-sidenav #sidenav mode="side">
   <div class="flex-container"
        fxLayout="column">
-    <button class="flex-item" md-button
+    <button class="flex-item" mat-button
             [routerLinkActive]="['active']"
             [routerLink]="['barcode']">Homepage
     </button>
     <div class="flex-item">
       <hr>
     </div>
-    <button class="flex-item" md-button
+    <button class="flex-item" mat-button
             [routerLinkActive]="['active']"
             [routerLink]="['barcode/media']">Media Stream
     </button>
     <div class="flex-item">
       <hr>
     </div>
-    <button class="flex-item" md-button
+    <button class="flex-item" mat-button
             [routerLinkActive]="['active']"
             [routerLink]="['barcode/field']">Input File
     </button>
   </div>
-</md-sidenav>
+</mat-sidenav>
 
