--- a/src/app/shared/fab-menu/fab-menu.component.html
+++ b/src/app/shared/fab-menu/fab-menu.component.html
@@ -1,8 +1,8 @@
 <span class="app-action" [class.m2app-dark]="isDarkTheme">
    <div class="flex-container" fxLayout="column">
-     <div class="flex-item" [@list1] *ngIf="active" [routerLink]="['barcode']"><button md-fab><md-icon>home</md-icon></button></div>
-     <div class="flex-item" [@list2] *ngIf="active" [routerLink]="['barcode/field']"><button md-fab><md-icon>file_upload</md-icon></button></div>
-     <div class="flex-item" [@list3] *ngIf="active" [routerLink]="['barcode/media']"><button md-fab><md-icon>camera</md-icon></button></div>
-     <div class="flex-item"><button md-fab (click)="onClick()"><md-icon>menu</md-icon></button></div>
+     <div class="flex-item" [@list1] *ngIf="active" [routerLink]="['barcode']"><button mat-fab><mat-icon>home</mat-icon></button></div>
+     <div class="flex-item" [@list2] *ngIf="active" [routerLink]="['barcode/field']"><button mat-fab><mat-icon>file_upload</mat-icon></button></div>
+     <div class="flex-item" [@list3] *ngIf="active" [routerLink]="['barcode/media']"><button mat-fab><mat-icon>camera</mat-icon></button></div>
+     <div class="flex-item"><button mat-fab (click)="onClick()"><mat-icon>menu</mat-icon></button></div>
    </div>
 </span>
