--- a/src/app/barcode/media-stream/media-stream.component.html
+++ b/src/app/barcode/media-stream/media-stream.component.html
@@ -1,36 +1,31 @@
-<div class="flex-container" fxLayout="row" fxLayout.xs="column"
-     fxLayoutAlign="center center"
-     fxLayoutAlign.xs="start">
-
-  <mat-card class="flex-item" fxFlex="50">
-    <p>Notice: You must allow to use your webcam. This Option only works on IE11+ and may not work with Android browser
-      older version. Alternatively use upload file option.</p>
-    <div id="interactive" class="viewport clearfix" #interactive></div>
-
-    <div class="show__sm" *ngIf="lastResult">
-      <p>Your Code is</p>
-      <p>{{ lastResult || async }}'</p>
-      <p *ngIf="!message">Searching...</p>
-      <p *ngIf="message">{{message}}</p>
+<mat-card class="app-input-section hidden__sm" *ngIf="lastResult">
+  <div class="ticket">
+    <div class="datas">
+      <a class="link">
+        <div class="ribbon">
+          <div class="label">LIMITED</div>
+        </div>
+        <span>Your Code is</span>
+        <strong>{{ lastResult || async }}'</strong>
+        <em *ngIf="!message">Searching...</em>
+        <em *ngIf="message">{{message}}</em>
+      </a>
     </div>
-  </mat-card>
+  </div>
+</mat-card>
 
-  <mat-card class="flex-item app-input-section hidden__sm" fxFlex="50" *ngIf="lastResult">
+<mat-card>
+  <p>Notice: You must allow to use your webcam. This Option only works on IE11+ and may not work with Android browser
+    older version. Alternatively use upload file option.</p>
 
-    <div class="ticket">
-      <div class="datas">
-        <a class="link">
-          <div class="ribbon">
-            <div class="label">LIMITED</div>
-          </div>
-          <span>Your Code is</span>
-          <strong>{{ lastResult || async }}'</strong>
-          <em *ngIf="!message">Searching...</em>
-          <em *ngIf="message">{{message}}</em>
-        </a>
-      </div>
-    </div>
-  </mat-card>
-</div>
+  <div class="show__sm" *ngIf="lastResult">
+    <p>Your Code is</p>
+    <p>{{ lastResult || async }}'</p>
+    <p *ngIf="!message">Searching...</p>
+    <p *ngIf="message">{{message}}</p>
+  </div>
+
+  <div id="interactive" class="viewport" #interactive></div>
+</mat-card>
 
 
